docs(swagger): Update swagger docs to support codgen
