# src/main/resources/assets/webapi/swagger/definitions/WorldFull.yaml
@@ -1,5 +1,5 @@
 allOf:
-  - $ref: "./World.yaml"
+  - $ref: "#/definitions/World"
   - title: WorldFull
     type: object
     properties:
@@ -7,7 +7,7 @@ allOf:
         type: object
         properties:
           center:
-            $ref: "./Vector3.yaml"
+            $ref: "#/definitions/Vector3"
           diameter:
             type: number
             description: The diameter of the world border.
@@ -72,7 +72,7 @@ allOf:
         type: number
         description: The seed used to generate this world.
       spawn:
-        $ref: "./Vector3.yaml"
+        $ref: "#/definitions/Vector3"
       time:
         type: number
         description: The current in game time.
